--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.552.0",
     "mermaid": "^10.6.1",
     "next": "15.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.0",
     "rehype-slug": "^6.0.0",
